# ordered-partitions

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  run.cc
include/hook_length/: partitions.h
src/: CMakeLists.txt  partitions.cc
tests/: CMakeLists.txt  test_partitions.cc
